# flexmock

./: .gitignore  .packit.yml  .readthedocs.yml  .travis.yml  CHANGELOG  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  flexmock.py  main.fmf  mkdocs.yml  pyproject.toml  python-flexmock.spec  requirements-py2-devel.txt  setup.py  tox.ini
.github/workflows/: ci.yml  coverage.yml  publish.yml
docs/: api.md  api.rst  changelog.md  compare.md  compare.rst  conf.py  index.md  index.rst  requirements.txt  start.md  start.rst  toctree.rst  user-guide.rst
docs/advanced/: builtin_functions.md  call_order.md  chained_methods.md  generators.md  multiple_return.md  new_instances.md  replacing_functions.md  state.md
docs/assets/: extra.css
docs/usage/: argument_matching.md  call_count.md  intro.md  mocking.md  spying.md
fedora/: README  main.fmf  python-flexmock.spec
flexmock/: __init__.py  api.py  exceptions.py  integrations.py
src/flexmock/: __init__.py  _api.py  _integrations.py  _pytest_plugin.py  api.py  exceptions.py  integrations.py
tests/: flexmock_modern_test.py  flexmock_nose_test.py  flexmock_pytest_test.py  flexmock_test.py  flexmock_unittest_test.py  proxy.py  py3_only_features.py  run_tests.sh  some_module.py  test_doctest.py  test_flexmock.py  test_generic_integration.py  test_integrations.py  test_pytest.py  test_teamcity.py  test_testtools.py  test_unittest.py  utils.py
tests/features/: __init__.py  arg_matching.py  call_count.py  common.py  conditional.py  derived.py  mocking.py  mocking_async.py  ordered.py  proxied.py  spying.py  stubbing.py  teardown.py
