[tool.poetry]
name = "flexmock-plus"
version = "0.10.7"
description = "flexmock is a testing library for Python that makes it easy to create mocks, stubs and fakes."
authors = ["Slavek Kabrda", "Herman Sheremetyev"]
maintainers = [
    "Adarsh Krishnan <adarshk7@gmail.com>",
    "Christophe Riolo Uusivaara <riolo.christophe@gmail.com>",
    "Olli Paakkunainen <olli@paakkunainen.fi>",
]
license = "BSD-2-Clause"
repository = "https://github.com/flexmock/flexmock"
documentation = "http://flexmock.readthedocs.org"
readme = "README.md"
keywords = ["mock", "testing", "test", "unittest", "pytest"]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Testing",
]
include = [
    "CHANGELOG.md",
    "docs/conf.py",
    "docs/Makefile",
    "docs/**/*.rst",
    "LICENSE",
    "README.md",
    "src/**/*.py",
    "tests/**/*.{py,sh}",
]
packages = [{ include="flexmock", from="src" }]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.910"
pylint = "^2.9.3"
black = "^21.6b0"
isort = "^5.9.1"
Sphinx = "^4.0.3"
tox = "^3.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
    "too-many-instance-attributes",
    "too-few-public-methods",
    "logging-fstring-interpolation",
    "too-many-function-args",
    "too-many-arguments",
    "bad-continuation",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-public-methods",
    "protected-access",
    "broad-except",
    "fixme",
]

[tool.pylint.format]
max-line-length = "100"

[tool.isort]
line_length = 100
profile = "black"

[tool.black]
line_length = 100

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

warn_return_any = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
